<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:elevation="100dp">

        <!--<SearchView-->
            <!--android:id="@+id/search_bar"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="8"/>-->

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="Wizzenger"
            android:textColor="#FFF"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/settings_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:src="@drawable/settings"
            android:elevation="5dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e2e2e2" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="#FFFFFF">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:tabIndicatorHeight="2dp"
            app:tabIndicatorColor="#76a869"
            />

    </android.support.v4.view.ViewPager>



</LinearLayout>
