<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bombardier_gabriel.wizzenger.activities.LoginActivity"
    android:background="@drawable/login_bg">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:layout_weight="16"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/login_zone"
        android:layout_width="275dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="15"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="275dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="275dp"
            android:layout_height="0dp"
            android:layout_below="@id/edit_text_email"
            android:layout_weight="1"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/action_sign_in"
                android:background="#FFF"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="140dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_marginBottom="15dp"
                android:text="@string/action_register"
                android:background="#FFF"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
