...
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/ic_wizz" />

        <EditText
            android:id="@+id/message_entry_zone"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:lines="8"
            android:background="@drawable/text_entry_back"
            android:inputType="textCapSentences"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>

        <Button
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
...
