<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bombardier_gabriel.wizzenger.fragments.mainFragments.ConversationsFragment">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0">
    </ListView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_conversations"
        android:paddingTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:background="#FFF"/>

</LinearLayout>
